--- a/ZeeSharing/package.json
+++ b/ZeeSharing/package.json
@@ -17,14 +17,19 @@
     "@angular/core": "^18.2.0",
     "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^18.2.8",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.6",
+    "@types/uuid": "^10.0.0",
     "express": "^4.18.2",
+    "firebase": "^10.14.1",
+    "ngx-image-cropper": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
