--- a/ZeeSharing/package.json
+++ b/ZeeSharing/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.6",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@types/uuid": "^10.0.0",
     "express": "^4.18.2",
     "firebase": "^10.14.1",
