--- a/ZeeSharing/package.json
+++ b/ZeeSharing/package.json
@@ -28,8 +28,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@types/uuid": "^10.0.0",
-    "express": "^4.18.2",
+    "base64-arraybuffer": "^1.0.2",
+    "buffer": "^6.0.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.1.0",
+    "jsmediatags": "^3.9.7",
+    "music-metadata": "^10.6.0",
     "ngx-image-cropper": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -42,6 +49,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jsmediatags": "^3.9.6",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
@@ -50,5 +58,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.5.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 18.2.6.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
