--- a/ZeeSharing/angular.json
+++ b/ZeeSharing/angular.json
@@ -21,12 +21,9 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-                "src/favicon.ico",
-                "src/assets",
                 {
-                    "glob": "*.svg",
-                    "input": "./node_modules/bootstrap-icons/icons/",
-                    "output": "/assets/img/"
+                "glob": "**/*",
+                "input": "public"
                 }
             ],
             "styles": [
@@ -83,12 +80,9 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-                "src/favicon.ico",
-                "src/assets",
                 {
-                    "glob": "*.svg",
-                    "input": "./node_modules/bootstrap-icons/icons/",
-                    "output": "/assets/img/"
+                "glob": "**/*",
+                "input": "public"
                 }
             ],
             "styles": [
