--- a/ZeeSharing/package.json
+++ b/ZeeSharing/package.json
@@ -26,7 +26,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "bad-words": "^4.0.0",
     "base64-arraybuffer": "^1.0.2",
+    "chart.js": "^4.4.9",
+    "firebase-admin": "^13.3.0",
     "music-metadata": "^11.0.2",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
